# easyrust

./: .gitmodules  CONTRIBUTORS.md  Cargo.toml  Copyright.md  README.md  Readme.md  Security.md  output.txt  readme.md
bronze/: Cargo.toml
bronze/src/: main.rs  var_2_1.rs  var_2_15.rs  var_2_16.rs  var_2_18.rs  var_2_19.rs  var_2_20.rs  var_2_23.rs  var_2_24.rs  var_2_27.rs  var_2_30.rs  var_2_34.rs  var_2_5.rs  var_2_6.rs
gold/: Cargo.toml  chinese.srt  diff.txt  english.srt  japanese.srt  korean.srt
gold/src/: main.rs  var_3_27.rs  var_3_28.rs  var_3_29.rs  var_3_30.rs  var_3_31.rs  var_3_32.rs  var_3_33.rs  var_3_34.rs  var_3_35.rs  var_3_36.rs  var_3_37.rs  var_3_38.rs  var_3_39.rs  var_4_1.rs  var_4_2.rs
platinum/: Cargo.toml  var_6_1
platinum/rusto_aws/: Cargo.toml
platinum/rusto_aws/src/: main.rs
platinum/var_4_10/: Cargo.toml
platinum/var_4_10/src/: main.rs
platinum/var_4_12/: Cargo.toml
platinum/var_4_12/src/: client.rs  main.rs  server.rs
platinum/var_4_3/: Cargo.toml
platinum/var_4_3/src/: main.rs
platinum/var_4_5/: Cargo.toml  monthly_report.txt
platinum/var_4_5/src/: main.rs
platinum/var_4_6/: Cargo.toml
platinum/var_4_7/: Cargo.toml
platinum/var_4_9/: Cargo.toml
platinum/var_5_1/: Cargo.toml
platinum/var_5_2/: Cargo.toml
silver/: Cargo.toml
silver/src/: main.rs  var_3_10.rs  var_3_13.rs  var_3_15.rs  var_3_18.rs  var_3_2.rs  var_3_20.rs  var_3_21.rs  var_3_22.rs  var_3_26.rs  var_3_27  var_3_27.rs  var_3_28.rs  var_3_4.rs  var_3_6.rs  var_3_7.rs  var_3_8.rs
src/: main.rs  var_00.rs  var_2_1.rs  var_2_10.rs  var_2_11.rs  var_2_12.rs  var_2_13.rs  var_2_14.rs  var_2_17.rs  var_2_18.rs  var_2_2.rs  var_2_21.rs  var_2_22.rs  var_2_25.rs  var_2_26.rs  var_2_28.rs  var_2_29.rs  var_2_3.rs  var_2_31.rs  var_2_32.rs  var_2_33.rs  var_2_4.rs  var_2_7.rs  var_2_8.rs  var_2_9.rs  var_3_1.rs  var_3_11.rs  var_3_12.rs  var_3_14.rs  var_3_16.rs  var_3_17.rs  var_3_19.rs  var_3_22.rs  var_3_23.rs  var_3_24.rs  var_3_25.rs  var_3_3.rs  var_3_5.rs  var_3_7.rs  var_3_8.rs  (+1 more)
submit/: Cargo.toml
submit/sb1/: Cargo.toml  example.txt
submit/sb2/: Cargo.toml
submit/sb3/: Cargo.toml
(+18 files in other folders)
