workspace = { members = [ "platinum/var_4_12","platinum/var_4_9/client", "platinum/var_4_9/server"] }
#workspace = { members = ["platinum/rusto_aws", "submit"] }

[package]
name = "easyrustv1"
version = "0.1.4"
edition = "2021"
author  = "jenny"
description = " this is sample sorce "
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda-build = "=0.0.1-alpha"
rand = "0.8.5"

[profile.release] 
panic = 'abort'
