[package]
name = "lambdafn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "*"
serde = "1.0.136"
tokio = { version = "1", features = ["macros"] }

[dev-dependencies]
tokio-test = "0.4.2"