[package]
name = "bronze"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


# panic 을 만나면 바로 프로그램 종료 
# panic = 'abort' 설정은 패닉이 발생하면 강제로 종료되므로, 
# 프로그램이 코어 덤프나 스택 트레이스 등의 추가 정보를 생성하지 않습니다. 
#이는 디버깅을 위한 정보를 최소화하여 프로그램의 크기를 줄이고 실행 속도를 높이는 데 도움이 됩니다.

[profile.release] 
panic = 'abort'
