[package]
name = "rusto_aws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.48.0"
rusoto_sqs = "0.48.0"
rusoto_s3 = "0.48.0"
rusoto_dynamodb = "0.48.0"
tokio = "1.37.0"
cargo-lambda = "1.2.0"
